Thu Jul 17 10:35:22 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/numbers.c: quick fix for an HP-UX compilation problem,
	  might require more attention could be an Unicode support breakage.

Wed Jul 16 10:46:35 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/numbers.c libxslt/transform.c libxslt/transform.h
	  libxslt/xsltInternals.h: optimize text node coalescing by 
	  caching info about the last text node generated and doing
	  fast alloc/copy of the text. Should fix #115273

Mon Jul 14 13:00:00 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* fixed bug 113520, incorrect result for date:seconds
	  with change to type casting in libexslt/date.c

Sat Jul 12 20:35:28 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* fixed bug 114764: trouble with globals and RVT's
	  with minor changes in variables.c and transform.c
	  so that any global instantiated with an RVT gets
	  uninitialized when the RVT is destroyed.
	  
Thu Jul 10 15:47:33 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: simple cast missing Peter Breitenlohner
	* breakpoint/Makefile.am: added deps to libxslt
	* tests/exslt/common/Makefile.am: integrated William Brack test
	  in the regression suite

Wed Jul  9 21:27:43 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* fixed bug 114812, trouble with imported exslt functions
	  added lookup function in libxslt/extension.c
	  enhanced exsltInitFunc in libexslt/functions.c to take
	  better care of imports

Wed Jul  9 12:19:34 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* python/generator.py python/libxslt-python-api.xml python/libxslt.c
	  python/libxslt_wrap.h python/libxsltclass.txt: patch from
	  Sean Treadway, adding Python bindings for extension element and
	  some bindings cleanups.
	* python/tests/Makefile.am python/tests/extelem.py: also add an
	  example/test.

Tue Jul  8 12:20:11 CEST 2003 Daniel Veillard <daniel@veillard.com>

	* python/libxml_wrap.h: applied patch from #116943 which should